Fix align on home collection

--- a/src/assets/scss/_home-collection.scss
+++ b/src/assets/scss/_home-collection.scss
@@ -204,7 +204,7 @@
     @extend .absolute-center;
     width: 35px;
     height: 35px;
-    left: 95.833333%;
+    left: 94.833333%;
     top: -2px;
     .btn {
         position: absolute;
