--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -162,12 +162,6 @@ nav{
                     }
                 }
             }
-            ul {
-                &.dropdown-menu {
-                    min-width: 10rem !important;
-                    padding: .5rem 0 !important;
-                }
-            }
         }
     }
     @media screen {
